--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 							<section id="two">
 								<div class="inner">
 									<header class="major">
-										<h2>Conclusâo</h2>
+										<h2>Conclusão</h2>
 									</header>
 									<p>dNullam et orci eu lorem consequat tinciunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus.</p>
 									<ul class="actions">
@@ -134,7 +134,7 @@
 									<div class="contact-method">
 										<span class="icon solid alt fa-phone"></span>
 										<h3>Phone</h3>
-										<span>(000) 000-0000 x12387</span>
+										<span>(+55) 11 97477-5399 </span>
 									</div>
 								</section>
 								<section>
@@ -142,8 +142,8 @@
 										<span class="icon solid alt fa-home"></span>
 										<h3>Address</h3>
 										<span>1234 Somewhere Road #5432<br />
-										Nashville, TN 00000<br />
-										United States of America</span>
+										São Paulo, TN 00000<br />
+										Brasil</span>
 									</div>
 								</section>
 							</section>
