--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Inicio</a></li>
-							<li><a href="landing.html">Informação</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<li><a href="inf.html">Sobre</a></li>
 							<li><a href="generic.html">Contatos</a></li>
 						</ul>
 					</nav>
