--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<!-- Menu -->
 					<nav id="menu">
 						<ul class="links">
-							<li><a href="index.html">Inicio</a></li>
+							<li><a href="index.html">início</a></li>
 							<li><a href="inf.html">Sobre</a></li>
 							<li><a href="generic.html">Contatos</a></li>
 						</ul>
@@ -87,7 +87,11 @@
 									<header class="major">
 										<h2>Conclusão</h2>
 									</header>
-									<p>dNullam et orci eu lorem consequat tinciunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus.</p>
+									<p>A dependência emocional é um padrão de comportamento no qual uma pessoa se sente excessivamente dependente de outra para sua autoestima, felicidade ou estabilidade emocional. Esse tipo de relacionamento costuma ser caracterizado por um desequilíbrio de poder, onde um dos indivíduos se coloca em uma posição submissa, acreditando que só pode ser feliz ou completo ao lado do outro. A dependência emocional pode se manifestar de várias maneiras, como a necessidade constante de validação, medo excessivo de rejeição ou abandono, e uma incapacidade de tomar decisões de forma independente.
+
+										Essa condição pode prejudicar tanto quem depende quanto quem é alvo da dependência, já que pode gerar relações disfuncionais, com um ciclo constante de inseguranças, manipulações emocionais e desconfianças. A longo prazo, pode levar ao desgaste emocional e afetar a saúde mental de ambas as partes envolvidas.
+										
+										Reconhecer a dependência emocional é o primeiro passo para buscar tratamento, como terapia, e desenvolver a autonomia emocional necessária para estabelecer relações mais equilibradas e saudáveis. Cultivar a autoestima, o autoconhecimento e a independência emocional são fundamentais para superar essa condição e construir relações mais saudáveis e sustentáveis.</p>
 									<ul class="actions">
 										<li><a href="landing.html" class="button next">Get Started</a></li>
 									</ul>
