atualizaçao dos arquivos e separacao dos index

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<!-- Menu -->
 					<nav id="menu">
 						<ul class="links">
-							<li><a href="index.html">início</a></li>
+							<li><a href="index.html">Inicio</a></li>
 							<li><a href="inf.html">Sobre</a></li>
 							<li><a href="generic.html">Contatos</a></li>
 						</ul>
@@ -87,82 +87,24 @@
 									<header class="major">
 										<h2>Conclusão</h2>
 									</header>
-									<p>A dependência emocional é um padrão de comportamento no qual uma pessoa se sente excessivamente dependente de outra para sua autoestima, felicidade ou estabilidade emocional. Esse tipo de relacionamento costuma ser caracterizado por um desequilíbrio de poder, onde um dos indivíduos se coloca em uma posição submissa, acreditando que só pode ser feliz ou completo ao lado do outro. A dependência emocional pode se manifestar de várias maneiras, como a necessidade constante de validação, medo excessivo de rejeição ou abandono, e uma incapacidade de tomar decisões de forma independente.
-
-										Essa condição pode prejudicar tanto quem depende quanto quem é alvo da dependência, já que pode gerar relações disfuncionais, com um ciclo constante de inseguranças, manipulações emocionais e desconfianças. A longo prazo, pode levar ao desgaste emocional e afetar a saúde mental de ambas as partes envolvidas.
-										
-										Reconhecer a dependência emocional é o primeiro passo para buscar tratamento, como terapia, e desenvolver a autonomia emocional necessária para estabelecer relações mais equilibradas e saudáveis. Cultivar a autoestima, o autoconhecimento e a independência emocional são fundamentais para superar essa condição e construir relações mais saudáveis e sustentáveis.</p>
+									<p>dNullam et orci eu lorem consequat tinciunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus.</p>
 									<ul class="actions">
-										<li><a href="landing.html" class="button next">Get Started</a></li>
+										<li><a href="landing.html" class="button next">Mais informações sobre nosso grupo</a></li>
 									</ul>
 								</div>
 							</section>
 
 					</div>
 
-				<!-- Contact -->
-					<section id="contact">
-						<div class="inner">
-							<section>
-								<form method="post" action="#">
-									<div class="fields">
-										<div class="field half">
-											<label for="name">Nome</label>
-											<input type="text" name="name" id="name" />
-										</div>
-										<div class="field half">
-											<label for="email">Email</label>
-											<input type="text" name="email" id="email" />
-										</div>
-										<div class="field">
-											<label for="message">Mensagem</label>
-											<textarea name="message" id="message" rows="6"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="primary" /></li>
-										<li><input type="reset" value="Clear" /></li>
-									</ul>
-								</form>
-							</section>
-							<section class="split">
-								<section>
-									<div class="contact-method">
-										<span class="icon solid alt fa-envelope"></span>
-										<h3>Email</h3>
-										<a href="#">isabeledduarda87@gmail.com </a>
-									</div>
-								</section>
-								<section>
-									<div class="contact-method">
-										<span class="icon solid alt fa-phone"></span>
-										<h3>Phone</h3>
-										<span>(+55) 11 97477-5399 </span>
-									</div>
-								</section>
-								<section>
-									<div class="contact-method">
-										<span class="icon solid alt fa-home"></span>
-										<h3>Address</h3>
-										<span>1234 Somewhere Road #5432<br />
-										São Paulo, TN 00000<br />
-										Brasil</span>
-									</div>
-								</section>
-							</section>
-						</div>
-					</section>
-
 				<!-- Footer -->
 					<footer id="footer">
 						<div class="inner">
 							<ul class="icons">
-								<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href=" https://arthurasilva.github.io/LacosInvisiveis/" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 
 							</ul>
 							<ul class="copyright">
-								<li>&copy; ETEC</li><li>feito por: <a id="azul" href="https://html5up.net">Arthur A, Angelo I, Anna B.S, Isabele B</a></li>
+								<li>&copy; ETEC</li><li>feito por: <a id="azul" href=" https://arthurasilva.github.io/LacosInvisiveis/">Arthur A, Angelo I, Anna B.S, Isabele B e Brayan C.</a></li>
 							</ul>
 						</div>
 					</footer>
