--- a/inf.html
+++ b/inf.html
@@ -14,7 +14,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo"><strong>Trabalho</strong> <span>Etec MCM</span></a>
+						<a href="index.html" class="logo"><strong>Voltar</strong> <span></span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
