--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 					<footer id="footer">
 						<div class="inner">
 							<ul class="icons">
-								<li><a href=" https://arthurasilva.github.io/LacosInvisiveis/" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="https://github.com/ArthurAsilva/LacosInvisiveis" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 
 							</ul>
 							<ul class="copyright">
