--- a/subAmbiSocial.html
+++ b/subAmbiSocial.html
@@ -20,13 +20,13 @@
 					</header>
 
 				<!-- Menu -->
-					<nav id="menu">
-						<ul class="links">
-							<li><a href="index.html">Início</a></li>
-							<li><a href="inf.html">Sobre</a></li>
-							<li><a href="generic.html">Contatos</a></li>
-						</ul>
-					</nav>
+				<nav id="menu">
+					<ul class="links">
+						<li><a href="index.html">início</a></li>
+						<li><a href="inf.html">Sobre</a></li>
+						<li><a href="generic.html">Contatos</a></li>
+					</ul>
+				</nav>
 
 				<!-- Banner -->
 				<!-- Note: The "styleN" class below should match that of the header element. -->
@@ -52,7 +52,7 @@
 									<header class="major">
 										<h2>Sed amet aliquam</h2>
 									</header>
-									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna.</p>
+									<p>O aspecto mais característico dessa condição é uma necessidade excessiva de ser reconhecido e aprovado em qualquer ambiente</p>
 								</div>
 							</section>
 
@@ -67,7 +67,7 @@
 											<header class="major">
 												<h3>Rhoncus magna</h3>
 											</header>
-											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
+											<p>Se não houver sinais suficientes de verdadeira apreciação e aceitação, o indivíduo entra em pânico. Para obter aprovação, a pessoa pode se tornar servil ou invisível.</p>
 											<ul class="actions">
 											
 											</ul>
@@ -80,7 +80,7 @@
 									<header class="major">
 										<h2>Massa libero</h2>
 									</header>
-									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus.</p>
+									<p>Os riscos de não tratar a dependência emocional são significativos. A pessoa corre o risco de perpetuar padrões de relacionamento disfuncionais, aumentar o estresse e a ansiedade, e experimentar uma deterioração da saúde mental e emocional. Além disso, pode ficar presa em relacionamentos insatisfatórios e prejudiciais.</p>
 									<ul class="actions">
 										
 									</ul>
@@ -88,12 +88,14 @@
 							</section>
 
 					</div>
+
 					<footer id="footer">
 						<div class="inner">
 							<ul class="icons">
-								<li><a href=" https://arthurasilva.github.io/LacosInvisiveis/" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="https://github.com/ArthurAsilva/LacosInvisiveis" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+							</ul>
 							<ul class="copyright">
-								<li>&copy; ETEC</li><li>Feito por:<a href=" https://arthurasilva.github.io/LacosInvisiveis/">Arthur A, Angelo I, Anna B.S, Isabele B e  Brayan C.</a></li>
+								<li>&copy; ETEC</li><li>feito por: <a id="azul" href=" https://arthurasilva.github.io/LacosInvisiveis/">Arthur A, Angelo I, Anna B.S, Isabele B e Brayan C.</a></li>
 							</ul>
 						</div>
 					</footer>
