--- a/generic.html
+++ b/generic.html
@@ -99,17 +99,17 @@
 					</section>
 
 				<!-- Footer -->
-					<footer id="footer">
-						<div class="inner">
-							<ul class="icons">
-								<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-							</ul>
-							<ul class="copyright">
-								<li>&copy; ETEC</li><li>feito por: <a id="azul" href="https://html5up.net">Arthur A, Angelo I, Anna B.S, Isabele B</a></li>
-							</ul>
-						</div>
-					</footer>
+				<footer id="footer">
+					<div class="inner">
+						<ul class="icons">
+							<li><a href="https://github.com/ArthurAsilva/LacosInvisiveis" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+						</ul>
+						<ul class="copyright">
+							<li>&copy; ETEC</li><li>feito por: <a id="azul" href=" https://arthurasilva.github.io/LacosInvisiveis/">Arthur A, Angelo I, Anna B.S, Isabele B e Brayan C.</a></li>
+						</ul>
+					</div>
+				</footer>
+
 
 			</div>
 
