--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Objetos</a></h3>
+										<h3><a href="subObjetos.html" class="link">Objetos</a></h3>
 									</header>
 								</article>
 								<article>
@@ -61,7 +61,7 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Familiar</a></h3>
+										<h3><a href="subFamilía.html" class="link">Familiar</a></h3>
 									</header>
 								</article>
 								<article>
@@ -69,7 +69,7 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">relacionamento</a></h3>
+										<h3><a href="subRelacionamentos.html" class="link">relacionamento</a></h3>
 									</header>
 								</article>
 								<article>
@@ -77,7 +77,7 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Ambiente Social</a></h3>
+										<h3><a href="subAmbiSocial.html" class="link">Ambiente Social</a></h3>
 									</header>
 							</section>
 
@@ -101,7 +101,6 @@
 						<div class="inner">
 							<ul class="icons">
 								<li><a href="https://github.com/ArthurAsilva/LacosInvisiveis" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-
 							</ul>
 							<ul class="copyright">
 								<li>&copy; ETEC</li><li>feito por: <a id="azul" href=" https://arthurasilva.github.io/LacosInvisiveis/">Arthur A, Angelo I, Anna B.S, Isabele B e Brayan C.</a></li>
