--- a/subObjetos.html
+++ b/subObjetos.html
@@ -119,22 +119,17 @@
 							</section>
 
 					</div>
-
-			
-					
-
 				
-				<footer id="footer">
-					<div class="inner">
-						<ul class="icons">
-							<li><a href="https://github.com/ArthurAsilva/LacosInvisiveis.git" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-
-						</ul>
-						<ul class="copyright">
-							<li>&copy; ETEC</li><li>feito por: <a id="azul" href="https://html5up.net">Arthur A, Angelo I, Anna B.S, Isabele B Brayan.C</a></li>
-						</ul>
-					</div>
-				</footer>
+					<footer id="footer">
+						<div class="inner">
+							<ul class="icons">
+								<li><a href="https://github.com/ArthurAsilva/LacosInvisiveis" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+							</ul>
+							<ul class="copyright">
+								<li>&copy; ETEC</li><li>feito por: <a id="azul" href=" https://arthurasilva.github.io/LacosInvisiveis/">Arthur A, Angelo I, Anna B.S, Isabele B e Brayan C.</a></li>
+							</ul>
+						</div>
+					</footer>
 
 			</div>
 
