--- a/subRelacionamentos.html
+++ b/subRelacionamentos.html
@@ -20,13 +20,13 @@
 					</header>
 
 				<!-- Menu -->
-					<nav id="menu">
-						<ul class="links">
-							<li><a href="index.html">Início</a></li>
-							<li><a href="inf.html">Sobre</a></li>
-							<li><a href="generic.html">Contatos</a></li>
-						</ul>
-					</nav>
+				<nav id="menu">
+					<ul class="links">
+						<li><a href="index.html">início</a></li>
+						<li><a href="inf.html">Sobre</a></li>
+						<li><a href="generic.html">Contatos</a></li>
+					</ul>
+				</nav>
 
 				<!-- Banner -->
 				<!-- Note: The "styleN" class below should match that of the header element. -->
@@ -88,8 +88,13 @@
 							</section>
 
 					</div>
+					<footer id="footer">
+						<div class="inner">
+							<ul class="icons">
+								<li><a href="https://github.com/ArthurAsilva/LacosInvisiveis" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+							</ul>
 							<ul class="copyright">
-								<li>&copy; ETEC</li><li>Feito por:<a href=" https://arthurasilva.github.io/LacosInvisiveis/">Arthur A, Angelo I, Anna B.S, Isabele B e Brayan C.</a></li>
+								<li>&copy; ETEC</li><li>feito por: <a id="azul" href=" https://arthurasilva.github.io/LacosInvisiveis/">Arthur A, Angelo I, Anna B.S, Isabele B e Brayan C.</a></li>
 							</ul>
 						</div>
 					</footer>
