--- a/subFamilía.html
+++ b/subFamilía.html
@@ -39,8 +39,7 @@
 								<h1>Familia</h1>
 							</header>
 							<div class="content">
-								<p>Lorem ipsum dolor sit amet nullam consequat<br />
-								sed veroeros. tempus adipiscing nulla.</p>
+								<p></p>
 							</div>
 						</div>
 					</section>
@@ -51,9 +50,12 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h2>Sed amet aliquam</h2>
+										<h2>O que é</h2>
 									</header>
-									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna.</p>
+									<p>As pessoas também perguntam
+										O que é dependência emocional familiar?
+										Dependência emocional é uma condição na qual uma pessoa se torna excessivamente ligada emocionalmente a outra, muitas vezes ao ponto de comprometer sua própria saúde emocional e bem-estar. Isso pode se manifestar em relacionamentos românticos, familiares, amizades ou até mesmo no ambiente de trabalho
+										</p>
 								</div>
 							</section>
 
@@ -66,9 +68,19 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Orci maecenas</h3>
+												<h3>Como impedir</h3>
 											</header>
-											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
+											<p>
+											    Como se livrar da dependência emocional?
+												Reconhecer que tem o problema. ...
+												Descobrir quais são os fatores responsáveis. ...
+												Aprender a lidar de forma saudável com os relacionamentos. ...
+												Colocar-se em primeiro lugar. ...
+												Saber se comunicar. ...
+												Aproveitar a solitude. ...
+												Desenvolver a paciência. ...
+												Trabalhar no processo de autoconhecimento.
+												</p>
 											<ul class="actions">
 				
 											</ul>
@@ -82,9 +94,10 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Rhoncus magna</h3>
+												<h3>O que causa</h3>
 											</header>
-											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
+											<p>Pode afetar pessoas de qualquer sexo, idade, origem étnica ou condição socioeconômica. No entanto, certos fatores como experiências passadas de trauma, padrões de relacionamento aprendidos na infância, e questões de autoestima podem aumentar a probabilidade de desenvolver dependência emocional
+											</p>
 										</div>
 									</div>
 								</section>
