--- a/subObjetos.html
+++ b/subObjetos.html
@@ -39,8 +39,7 @@
 								<h1>Objetos</h1>
 							</header>
 							<div class="content">
-								<p>Lorem ipsum dolor sit amet nullam consequat<br />
-								sed veroeros. tempus adipiscing nulla.</p>
+								<p></p>
 							</div>
 						</div>
 					</section>
@@ -52,9 +51,12 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h2>Sed amet aliquam</h2>
+										<h2>O que é</h2>
 									</header>
-									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna.</p>
+									<p>
+
+								    Definição: como o próprio nome já deixa claro, o apego emocional a objetos é um forte vínculo que a pessoa sente em relação a um determinado item, independentemente do valor monetário do mesmo. Origem: as causas são relacionadas a experiências marcantes do passado, principalmente na infância ou adolescência
+										  </p>
 								</div>
 							</section>
 
@@ -67,9 +69,10 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Orci maecenas</h3>
+												<h3>O que causa</h3>
 											</header>
-											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
+											<p>Sempre falo que uma das intenções do nosso mobiliário é emocionar! Para isso, além da forma e função, acredito na história que esse móvel carrega, no conceito, na influência das memórias afetivas, na atenção ao processo e na escolha dos materiais”, conta Linda Martins.
+											</p>
 											<ul class="actions">
 				
 											</ul>
@@ -83,9 +86,11 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Rhoncus magna</h3>
+												<h3>Como impedir</h3>
 											</header>
-											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
+											<p>Questione-se: pergunte a si próprio o que o apego emocional a objetos está fazendo com a sua vida, o que está proporcionando no dia a dia. Algumas perguntas podem ajudar: “Deposito a minha alegria no fato de ter objetos?”.
+
+											Ao fornecer um ambiente de apoio e compreensão, amigos e familiares auxiliam no processo de tratamento da dependência emocional, ajudando a pessoa a construir relacionamentos mais saudáveis e gratificante.</p>
 										</div>
 									</div>
 								</section>
