--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
-								<h1>Laços invisiveis: as consequencias dependencia emocial</h1>
+								<h1>Laços invisiveis: as consequências dependencia emocial</h1>
 							</header>
 							<div class="content">
 								<p>A dependência emocional é um estado em que uma pessoa se torna excessivamente dependente de outra para sua felicidade e bem-estar. Essa condição pode levar a comportamentos de apego excessivo, insegurança e medo de abandono. Indivíduos que enfrentam a dependência emocional frequentemente sentem que não conseguem viver plenamente sem a presença do outro, o que pode resultar em relacionamentos desequilibrados e prejudiciais. O processo de superação envolve autoconhecimento, fortalecimento da autoestima e desenvolvimento de relacionamentos saudáveis, onde ambos os parceiros se apoiam sem perder sua individualidade.</p>
@@ -87,7 +87,17 @@
 									<header class="major">
 										<h2>Conclusão</h2>
 									</header>
-									<p>dNullam et orci eu lorem consequat tinciunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus.</p>
+									<p>dependência emocional é uma condição que pode dificultar o estabelecimento e manutenção de relações saudáveis. Ela pode ocorrer em diversos tipos de relacionamentos, como amorosos, familiares, de amizade ou no ambiente de trabalho. 
+										Para construir e manter relações saudáveis, é importante: Ter uma comunicação aberta e honesta, Manter a individualidade, Estabelecer limites saudáveis, Desenvolver a autoestima, Apoiar o crescimento pessoal do parceiro. 
+										Para lidar com a dependência emocional, é possível:
+										Realizar uma autoavaliação honesta
+										Desenvolver a autonomia, autoestima e amor próprio
+										Praticar habilidades de autorregulação emocional
+										Manter um diário emocional
+										Procurar apoio profissional
+										Participar de grupos de apoio 
+										É importante lembrar que a jornada para a independência emocional pode ter altos e baixos, mas é possível superar os obstáculos com autocompaixão e paciência. 
+										</p>
 									<ul class="actions">
 										<li><a href="landing.html" class="button next">Mais informações sobre nosso grupo</a></li>
 									</ul>
