--- a/subAmbiSocial.html
+++ b/subAmbiSocial.html
@@ -36,7 +36,7 @@
 								<img src="images/pic07.jpg" alt="" />
 							</span>
 							<header class="major">
-								<h1>Relacionamentos</h1>
+								<h1>Ambiente social</h1>
 							</header>
 							<div class="content">
 							</div>
@@ -50,7 +50,7 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h2>Sed amet aliquam</h2>
+										<h2> O Que é</h2>
 									</header>
 									<p>O aspecto mais característico dessa condição é uma necessidade excessiva de ser reconhecido e aprovado em qualquer ambiente</p>
 								</div>
@@ -60,12 +60,12 @@
 							<section id="two" class="spotlights">
 								<section>
 									<a href="" class="image">
-										<img src="images/pic09.jpg" alt="" data-position="top center" />
+										<img src="images/afbd19f4a8bba0c0c396afafe0f1c34a.jpg" alt="" data-position="top center" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Rhoncus magna</h3>
+												<h3>Consequências</h3>
 											</header>
 											<p>Se não houver sinais suficientes de verdadeira apreciação e aceitação, o indivíduo entra em pânico. Para obter aprovação, a pessoa pode se tornar servil ou invisível.</p>
 											<ul class="actions">
@@ -78,7 +78,7 @@
 							<section id="three">
 								<div class="inner">
 									<header class="major">
-										<h2>Massa libero</h2>
+										<h2>Riscos</h2>
 									</header>
 									<p>Os riscos de não tratar a dependência emocional são significativos. A pessoa corre o risco de perpetuar padrões de relacionamento disfuncionais, aumentar o estresse e a ansiedade, e experimentar uma deterioração da saúde mental e emocional. Além disso, pode ficar presa em relacionamentos insatisfatórios e prejudiciais.</p>
 									<ul class="actions">
