--- a/subRelacionamentos.html
+++ b/subRelacionamentos.html
@@ -73,7 +73,7 @@
 							<section id="two" class="spotlights">
 								<section>
 									<a href="" class="image">
-										<img src="images/pic09.jpg" alt="" data-position="top center" />
+										<img src="images/relacao-toxica-750x430-1-1.jpg" alt="" data-position="top center" />
 									</a>
 									<div class="content">
 										<div class="inner">
