--- a/subFamilía.html
+++ b/subFamilía.html
@@ -39,7 +39,7 @@
 								<h1>Familia</h1>
 							</header>
 							<div class="content">
-								<p>Lorem ipsum dolor sit amet nullam consequat<br />
+								<p>Família representa uma agregação de indivíduos unidos por laços afetivos ou de parentesco (consanguinidade)<br />
 								sed veroeros. tempus adipiscing nulla.</p>
 							</div>
 						</div>
