Atualizar o subFamilía.html

--- a/subFamilía.html
+++ b/subFamilía.html
@@ -39,8 +39,7 @@
 								<h1>Familia</h1>
 							</header>
 							<div class="content">
-								<p>Família representa uma agregação de indivíduos unidos por laços afetivos ou de parentesco (consanguinidade)<br />
-								sed veroeros. tempus adipiscing nulla.</p>
+								<p>Família representa uma agregação de indivíduos unidos por laços afetivos ou de parentesco (consanguinidade)<br /></p>
 							</div>
 						</div>
 					</section>
