Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 										É importante lembrar que a jornada para a independência emocional pode ter altos e baixos, mas é possível superar os obstáculos com autocompaixão e paciência. 
 										</p>
 									<ul class="actions">
-										<li><a href="landing.html" class="button next">Mais informações sobre nosso grupo</a></li>
+										<li><a href="inf.html" class="button next">Mais informações sobre nosso grupo</a></li>
 									</ul>
 								</div>
 							</section>
