Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<div id="wrapper">
 
 					<header id="header" class="alt">
-						<a href="index.html" class="logo"><strong>Dependecia emocial</strong></a>
+						<a href="index.html" class="logo"><strong>Dependência emocial</strong></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -22,7 +22,7 @@
 				<!-- Menu -->
 					<nav id="menu">
 						<ul class="links">
-							<li><a href="index.html">Inicio</a></li>
+							<li><a href="index.html">Início</a></li>
 							<li><a href="inf.html">Sobre</a></li>
 							<li><a href="generic.html">Contatos</a></li>
 						</ul>
@@ -32,7 +32,7 @@
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
-								<h1>Laços invisiveis: as consequências dependencia emocial</h1>
+								<h1>Laços invisíveis: as consequências da dependência emocial</h1>
 							</header>
 							<div class="content">
 								<p>A dependência emocional é um estado em que uma pessoa se torna excessivamente dependente de outra para sua felicidade e bem-estar. Essa condição pode levar a comportamentos de apego excessivo, insegurança e medo de abandono. Indivíduos que enfrentam a dependência emocional frequentemente sentem que não conseguem viver plenamente sem a presença do outro, o que pode resultar em relacionamentos desequilibrados e prejudiciais. O processo de superação envolve autoconhecimento, fortalecimento da autoestima e desenvolvimento de relacionamentos saudáveis, onde ambos os parceiros se apoiam sem perder sua individualidade.</p>
@@ -61,7 +61,7 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="subFamilía.html" class="link">Familiar</a></h3>
+										<h3><a href="subFamilía.html" class="link">Família</a></h3>
 									</header>
 								</article>
 								<article>
@@ -69,7 +69,7 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="subRelacionamentos.html" class="link">relacionamento</a></h3>
+										<h3><a href="subRelacionamentos.html" class="link">Relacionamentos</a></h3>
 									</header>
 								</article>
 								<article>
