Atualizar o subAmbiSocial.html

--- a/subAmbiSocial.html
+++ b/subAmbiSocial.html
@@ -113,6 +113,7 @@
 									<a class="image">
 										<img src="images/pic09.jpg" alt="" data-position="top center" />
 									</a>
+            </section>
 
 					</div>			
 				
